--- a/carwrapping/netlify.toml
+++ b/carwrapping/netlify.toml
@@ -1,7 +1,7 @@
 [build]
     base = "carwrapping"
     publish = "/.dist"
-    command = "npm run build"
+    command = "sanity build"
 
 [[redirects]]
     from = "/*"
