--- a/carwrapping/netlify.toml
+++ b/carwrapping/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-    base = "/carwrapping"
-    publish = "/dist"
+    base = "carwrapping"
+    publish = "carwrapping/.next"
     command = "npm run build"
 
 [[redirects]]
