--- a/carwrapping/netlify.toml
+++ b/carwrapping/netlify.toml
@@ -1,7 +1,7 @@
 [build]
     base = "carwrapping"
-    publish = "carwrapping/.next"
-    command = "npm run build"
+    publish = "/dist"
+    command = "sanity build"
 
 [[redirects]]
     from = "/*"
