--- a/carwrapping/netlify.toml
+++ b/carwrapping/netlify.toml
@@ -1,7 +1,7 @@
 [build]
     base = "/carwrapping"
     publish = "../.next"
-    command = "sanity build"
+    command = "npm run build"
 
 [[redirects]]
     from = "/*"
