--- a/carwrapping/netlify.toml
+++ b/carwrapping/netlify.toml
@@ -3,6 +3,15 @@
     publish = "../.next"
     command = "npm run build"
 
+
+[[plugins]]
+    package = "@netlify/plugin-nextjs"
+
+[[plugins]]
+    package = "netlify-plugin-inline-functions-env"
+    [plugins.inputs]
+        buildEvent = "onBuild"
+        
 [[redirects]]
     from = "/*"
     to = "/"
