--- a/carwrapping/netlify.toml
+++ b/carwrapping/netlify.toml
@@ -1,18 +1,9 @@
 [build]
-    base = "/carwrapping"
+    base = "../carwrapping"
     publish = "../.next"
     command = "npm run build"
 
-
-[[plugins]]
-    package = "@netlify/plugin-nextjs"
-
-[[plugins]]
-    package = "netlify-plugin-inline-functions-env"
-    [plugins.inputs]
-        buildEvent = "onBuild"
-        
 [[redirects]]
     from = "/*"
-    to = "/"
     status = 200
+    to = "/"
