--- a/carwrapping/netlify.toml
+++ b/carwrapping/netlify.toml
@@ -3,6 +3,14 @@
     publish = "../.next"
     command = "npm run build"
 
+[[plugins]]
+package = "netlify-plugin-inline-functions-env"
+
+[[plugins]]
+package = "netlify-plugin-inline-functions-env"
+[plugins.inputs]
+buildEvent = "onBuild"
+
 [[redirects]]
     from = "/*"
     to = "/" 
