update netlify plugin

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
     functions = "/netlify"
 
 [[plugins]]
-package = "netlify-plugin-inline-functions-env"
+package = "@netlify/plugin-nextjs"
 
 [[plugins]]
 package = "netlify-plugin-inline-functions-env"
