--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sanity": "^2.20.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.3.0",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
