--- a/carwrapping/netlify.toml
+++ b/carwrapping/netlify.toml
@@ -1,7 +1,9 @@
 [build]
-    base = "/carwrapping"
+    base = "/"
     publish = "../.next"
     command = "npm run build"
+    functions = "/netlify"
+
 
 [[redirects]]
     from = "/*"
