--- a/carwrapping/netlify.toml
+++ b/carwrapping/netlify.toml
@@ -1,8 +1,8 @@
 [build]
-    base = "/"
+    base = "/carwrapping"
     publish = "../.next"
     command = "npm run build"
-    functions = "/netlify"
+    functions = "/carwrapping/netlify"
 
 
 [[redirects]]
