--- a/carwrapping/netlify.toml
+++ b/carwrapping/netlify.toml
@@ -1,6 +1,6 @@
 [build]
     base = "/carwrapping"
-    publish = "/carwrapping/static"
+    publish = "../.next"
     command = "npm run build"
 
 [[redirects]]
