--- a/carwrapping/netlify.toml
+++ b/carwrapping/netlify.toml
@@ -3,6 +3,9 @@
     publish = "../.next"
     command = "npm run build"
 
+[[plugins]]
+package = "@netlify/plugin-nextjs"
+
 [[redirects]]
     from = "/*"
     to = "/" 
